// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RigComponent /> renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RigComponent
    saveManifest={[Function]}
    userLogin={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Connect(RigNavComponent)
          error={undefined}
          openConfigurationsHandler={[Function]}
          openProductManagementHandler={[Function]}
          selectedView="Extension Views"
          viewerHandler={[Function]}
/>,
        <div>
          <ExtensionViewContainer
                    deleteExtensionViewHandler={[Function]}
                    extensionViews={Array []}
                    openEditViewHandler={[Function]}
                    openExtensionViewHandler={[Function]}
          />
          <SignInDialog />
          <Console />
</div>,
      ],
      "className": "rig-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "error": undefined,
          "openConfigurationsHandler": [Function],
          "openProductManagementHandler": [Function],
          "selectedView": "Extension Views",
          "viewerHandler": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <ExtensionViewContainer
              deleteExtensionViewHandler={[Function]}
              extensionViews={Array []}
              openEditViewHandler={[Function]}
              openExtensionViewHandler={[Function]}
/>,
            false,
            false,
            false,
            <SignInDialog />,
            <Console />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "deleteExtensionViewHandler": [Function],
              "extensionViews": Array [],
              "openEditViewHandler": [Function],
              "openExtensionViewHandler": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
          false,
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Connect(RigNavComponent)
            error={undefined}
            openConfigurationsHandler={[Function]}
            openProductManagementHandler={[Function]}
            selectedView="Extension Views"
            viewerHandler={[Function]}
/>,
          <div>
            <ExtensionViewContainer
                        deleteExtensionViewHandler={[Function]}
                        extensionViews={Array []}
                        openEditViewHandler={[Function]}
                        openExtensionViewHandler={[Function]}
            />
            <SignInDialog />
            <Console />
</div>,
        ],
        "className": "rig-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "error": undefined,
            "openConfigurationsHandler": [Function],
            "openProductManagementHandler": [Function],
            "selectedView": "Extension Views",
            "viewerHandler": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <ExtensionViewContainer
                deleteExtensionViewHandler={[Function]}
                extensionViews={Array []}
                openEditViewHandler={[Function]}
                openExtensionViewHandler={[Function]}
/>,
              false,
              false,
              false,
              <SignInDialog />,
              <Console />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "deleteExtensionViewHandler": [Function],
                "extensionViews": Array [],
                "openEditViewHandler": [Function],
                "openExtensionViewHandler": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            false,
            false,
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<RigComponent /> renders extension view correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RigComponent
    saveManifest={[Function]}
    userLogin={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Connect(RigNavComponent)
          error={undefined}
          openConfigurationsHandler={[Function]}
          openProductManagementHandler={[Function]}
          selectedView="Extension Views"
          viewerHandler={[Function]}
/>,
        <div>
          <ExtensionViewContainer
                    deleteExtensionViewHandler={[Function]}
                    extensionViews={
                              Array [
                                        Object {
                                          "extension": Object {
                                            "anchor": "panel",
                                            "authorName": "test",
                                            "bitsEnabled": false,
                                            "canInstall": true,
                                            "channelId": "channelId",
                                            "description": "description",
                                            "eulaTosUrl": "test.biz",
                                            "iconUrl": "iconUrl",
                                            "iconUrls": Object {},
                                            "id": "id",
                                            "installationCount": 0,
                                            "name": "name",
                                            "panelHeight": 300,
                                            "privacyPolicyUrl": "test.com",
                                            "requestIdentityLink": false,
                                            "requiredBroadcasterAbilities": Array [
                                              "test",
                                            ],
                                            "screenshotUrls": Array [
                                              "test.png",
                                            ],
                                            "sku": "sku",
                                            "state": "Testing",
                                            "summary": "summary",
                                            "supportEmail": "test",
                                            "token": "token",
                                            "vendorCode": "vendorCode",
                                            "version": "0.1",
                                            "views": Object {
                                              "component": Object {
                                                "aspectHeight": 3000,
                                                "aspectWidth": 2500,
                                                "size": 0,
                                                "viewerUrl": "test",
                                                "zoom": false,
                                                "zoomPixels": 1024,
                                              },
                                              "config": Object {
                                                "viewerUrl": "test",
                                              },
                                              "liveConfig": Object {
                                                "viewerUrl": "test",
                                              },
                                              "mobile": Object {
                                                "viewerUrl": "test",
                                              },
                                              "panel": Object {
                                                "height": 300,
                                                "viewerUrl": "test",
                                              },
                                              "videoOverlay": Object {
                                                "viewerUrl": "test",
                                              },
                                            },
                                            "whitelistedConfigUrls": Array [
                                              "foo",
                                            ],
                                            "whitelistedPanelUrls": Array [
                                              "bar",
                                            ],
                                          },
                                          "id": "1",
                                          "linked": false,
                                          "mode": "viewer",
                                          "orientation": "Portrait",
                                          "role": "Logged-Out Viewer",
                                          "type": "Panel",
                                          "x": 0,
                                          "y": 0,
                                        },
                                      ]
                    }
                    openEditViewHandler={[Function]}
                    openExtensionViewHandler={[Function]}
          />
          <SignInDialog />
          <Console />
</div>,
      ],
      "className": "rig-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "error": undefined,
          "openConfigurationsHandler": [Function],
          "openProductManagementHandler": [Function],
          "selectedView": "Extension Views",
          "viewerHandler": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <ExtensionViewContainer
              deleteExtensionViewHandler={[Function]}
              extensionViews={
                            Array [
                                          Object {
                                            "extension": Object {
                                              "anchor": "panel",
                                              "authorName": "test",
                                              "bitsEnabled": false,
                                              "canInstall": true,
                                              "channelId": "channelId",
                                              "description": "description",
                                              "eulaTosUrl": "test.biz",
                                              "iconUrl": "iconUrl",
                                              "iconUrls": Object {},
                                              "id": "id",
                                              "installationCount": 0,
                                              "name": "name",
                                              "panelHeight": 300,
                                              "privacyPolicyUrl": "test.com",
                                              "requestIdentityLink": false,
                                              "requiredBroadcasterAbilities": Array [
                                                "test",
                                              ],
                                              "screenshotUrls": Array [
                                                "test.png",
                                              ],
                                              "sku": "sku",
                                              "state": "Testing",
                                              "summary": "summary",
                                              "supportEmail": "test",
                                              "token": "token",
                                              "vendorCode": "vendorCode",
                                              "version": "0.1",
                                              "views": Object {
                                                "component": Object {
                                                  "aspectHeight": 3000,
                                                  "aspectWidth": 2500,
                                                  "size": 0,
                                                  "viewerUrl": "test",
                                                  "zoom": false,
                                                  "zoomPixels": 1024,
                                                },
                                                "config": Object {
                                                  "viewerUrl": "test",
                                                },
                                                "liveConfig": Object {
                                                  "viewerUrl": "test",
                                                },
                                                "mobile": Object {
                                                  "viewerUrl": "test",
                                                },
                                                "panel": Object {
                                                  "height": 300,
                                                  "viewerUrl": "test",
                                                },
                                                "videoOverlay": Object {
                                                  "viewerUrl": "test",
                                                },
                                              },
                                              "whitelistedConfigUrls": Array [
                                                "foo",
                                              ],
                                              "whitelistedPanelUrls": Array [
                                                "bar",
                                              ],
                                            },
                                            "id": "1",
                                            "linked": false,
                                            "mode": "viewer",
                                            "orientation": "Portrait",
                                            "role": "Logged-Out Viewer",
                                            "type": "Panel",
                                            "x": 0,
                                            "y": 0,
                                          },
                                        ]
              }
              openEditViewHandler={[Function]}
              openExtensionViewHandler={[Function]}
/>,
            false,
            false,
            false,
            <SignInDialog />,
            <Console />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "deleteExtensionViewHandler": [Function],
              "extensionViews": Array [
                Object {
                  "extension": Object {
                    "anchor": "panel",
                    "authorName": "test",
                    "bitsEnabled": false,
                    "canInstall": true,
                    "channelId": "channelId",
                    "description": "description",
                    "eulaTosUrl": "test.biz",
                    "iconUrl": "iconUrl",
                    "iconUrls": Object {},
                    "id": "id",
                    "installationCount": 0,
                    "name": "name",
                    "panelHeight": 300,
                    "privacyPolicyUrl": "test.com",
                    "requestIdentityLink": false,
                    "requiredBroadcasterAbilities": Array [
                      "test",
                    ],
                    "screenshotUrls": Array [
                      "test.png",
                    ],
                    "sku": "sku",
                    "state": "Testing",
                    "summary": "summary",
                    "supportEmail": "test",
                    "token": "token",
                    "vendorCode": "vendorCode",
                    "version": "0.1",
                    "views": Object {
                      "component": Object {
                        "aspectHeight": 3000,
                        "aspectWidth": 2500,
                        "size": 0,
                        "viewerUrl": "test",
                        "zoom": false,
                        "zoomPixels": 1024,
                      },
                      "config": Object {
                        "viewerUrl": "test",
                      },
                      "liveConfig": Object {
                        "viewerUrl": "test",
                      },
                      "mobile": Object {
                        "viewerUrl": "test",
                      },
                      "panel": Object {
                        "height": 300,
                        "viewerUrl": "test",
                      },
                      "videoOverlay": Object {
                        "viewerUrl": "test",
                      },
                    },
                    "whitelistedConfigUrls": Array [
                      "foo",
                    ],
                    "whitelistedPanelUrls": Array [
                      "bar",
                    ],
                  },
                  "id": "1",
                  "linked": false,
                  "mode": "viewer",
                  "orientation": "Portrait",
                  "role": "Logged-Out Viewer",
                  "type": "Panel",
                  "x": 0,
                  "y": 0,
                },
              ],
              "openEditViewHandler": [Function],
              "openExtensionViewHandler": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
          false,
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Connect(RigNavComponent)
            error={undefined}
            openConfigurationsHandler={[Function]}
            openProductManagementHandler={[Function]}
            selectedView="Extension Views"
            viewerHandler={[Function]}
/>,
          <div>
            <ExtensionViewContainer
                        deleteExtensionViewHandler={[Function]}
                        extensionViews={
                                    Array [
                                                Object {
                                                  "extension": Object {
                                                    "anchor": "panel",
                                                    "authorName": "test",
                                                    "bitsEnabled": false,
                                                    "canInstall": true,
                                                    "channelId": "channelId",
                                                    "description": "description",
                                                    "eulaTosUrl": "test.biz",
                                                    "iconUrl": "iconUrl",
                                                    "iconUrls": Object {},
                                                    "id": "id",
                                                    "installationCount": 0,
                                                    "name": "name",
                                                    "panelHeight": 300,
                                                    "privacyPolicyUrl": "test.com",
                                                    "requestIdentityLink": false,
                                                    "requiredBroadcasterAbilities": Array [
                                                      "test",
                                                    ],
                                                    "screenshotUrls": Array [
                                                      "test.png",
                                                    ],
                                                    "sku": "sku",
                                                    "state": "Testing",
                                                    "summary": "summary",
                                                    "supportEmail": "test",
                                                    "token": "token",
                                                    "vendorCode": "vendorCode",
                                                    "version": "0.1",
                                                    "views": Object {
                                                      "component": Object {
                                                        "aspectHeight": 3000,
                                                        "aspectWidth": 2500,
                                                        "size": 0,
                                                        "viewerUrl": "test",
                                                        "zoom": false,
                                                        "zoomPixels": 1024,
                                                      },
                                                      "config": Object {
                                                        "viewerUrl": "test",
                                                      },
                                                      "liveConfig": Object {
                                                        "viewerUrl": "test",
                                                      },
                                                      "mobile": Object {
                                                        "viewerUrl": "test",
                                                      },
                                                      "panel": Object {
                                                        "height": 300,
                                                        "viewerUrl": "test",
                                                      },
                                                      "videoOverlay": Object {
                                                        "viewerUrl": "test",
                                                      },
                                                    },
                                                    "whitelistedConfigUrls": Array [
                                                      "foo",
                                                    ],
                                                    "whitelistedPanelUrls": Array [
                                                      "bar",
                                                    ],
                                                  },
                                                  "id": "1",
                                                  "linked": false,
                                                  "mode": "viewer",
                                                  "orientation": "Portrait",
                                                  "role": "Logged-Out Viewer",
                                                  "type": "Panel",
                                                  "x": 0,
                                                  "y": 0,
                                                },
                                              ]
                        }
                        openEditViewHandler={[Function]}
                        openExtensionViewHandler={[Function]}
            />
            <SignInDialog />
            <Console />
</div>,
        ],
        "className": "rig-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "error": undefined,
            "openConfigurationsHandler": [Function],
            "openProductManagementHandler": [Function],
            "selectedView": "Extension Views",
            "viewerHandler": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <ExtensionViewContainer
                deleteExtensionViewHandler={[Function]}
                extensionViews={
                                Array [
                                                Object {
                                                  "extension": Object {
                                                    "anchor": "panel",
                                                    "authorName": "test",
                                                    "bitsEnabled": false,
                                                    "canInstall": true,
                                                    "channelId": "channelId",
                                                    "description": "description",
                                                    "eulaTosUrl": "test.biz",
                                                    "iconUrl": "iconUrl",
                                                    "iconUrls": Object {},
                                                    "id": "id",
                                                    "installationCount": 0,
                                                    "name": "name",
                                                    "panelHeight": 300,
                                                    "privacyPolicyUrl": "test.com",
                                                    "requestIdentityLink": false,
                                                    "requiredBroadcasterAbilities": Array [
                                                      "test",
                                                    ],
                                                    "screenshotUrls": Array [
                                                      "test.png",
                                                    ],
                                                    "sku": "sku",
                                                    "state": "Testing",
                                                    "summary": "summary",
                                                    "supportEmail": "test",
                                                    "token": "token",
                                                    "vendorCode": "vendorCode",
                                                    "version": "0.1",
                                                    "views": Object {
                                                      "component": Object {
                                                        "aspectHeight": 3000,
                                                        "aspectWidth": 2500,
                                                        "size": 0,
                                                        "viewerUrl": "test",
                                                        "zoom": false,
                                                        "zoomPixels": 1024,
                                                      },
                                                      "config": Object {
                                                        "viewerUrl": "test",
                                                      },
                                                      "liveConfig": Object {
                                                        "viewerUrl": "test",
                                                      },
                                                      "mobile": Object {
                                                        "viewerUrl": "test",
                                                      },
                                                      "panel": Object {
                                                        "height": 300,
                                                        "viewerUrl": "test",
                                                      },
                                                      "videoOverlay": Object {
                                                        "viewerUrl": "test",
                                                      },
                                                    },
                                                    "whitelistedConfigUrls": Array [
                                                      "foo",
                                                    ],
                                                    "whitelistedPanelUrls": Array [
                                                      "bar",
                                                    ],
                                                  },
                                                  "id": "1",
                                                  "linked": false,
                                                  "mode": "viewer",
                                                  "orientation": "Portrait",
                                                  "role": "Logged-Out Viewer",
                                                  "type": "Panel",
                                                  "x": 0,
                                                  "y": 0,
                                                },
                                              ]
                }
                openEditViewHandler={[Function]}
                openExtensionViewHandler={[Function]}
/>,
              false,
              false,
              false,
              <SignInDialog />,
              <Console />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "deleteExtensionViewHandler": [Function],
                "extensionViews": Array [
                  Object {
                    "extension": Object {
                      "anchor": "panel",
                      "authorName": "test",
                      "bitsEnabled": false,
                      "canInstall": true,
                      "channelId": "channelId",
                      "description": "description",
                      "eulaTosUrl": "test.biz",
                      "iconUrl": "iconUrl",
                      "iconUrls": Object {},
                      "id": "id",
                      "installationCount": 0,
                      "name": "name",
                      "panelHeight": 300,
                      "privacyPolicyUrl": "test.com",
                      "requestIdentityLink": false,
                      "requiredBroadcasterAbilities": Array [
                        "test",
                      ],
                      "screenshotUrls": Array [
                        "test.png",
                      ],
                      "sku": "sku",
                      "state": "Testing",
                      "summary": "summary",
                      "supportEmail": "test",
                      "token": "token",
                      "vendorCode": "vendorCode",
                      "version": "0.1",
                      "views": Object {
                        "component": Object {
                          "aspectHeight": 3000,
                          "aspectWidth": 2500,
                          "size": 0,
                          "viewerUrl": "test",
                          "zoom": false,
                          "zoomPixels": 1024,
                        },
                        "config": Object {
                          "viewerUrl": "test",
                        },
                        "liveConfig": Object {
                          "viewerUrl": "test",
                        },
                        "mobile": Object {
                          "viewerUrl": "test",
                        },
                        "panel": Object {
                          "height": 300,
                          "viewerUrl": "test",
                        },
                        "videoOverlay": Object {
                          "viewerUrl": "test",
                        },
                      },
                      "whitelistedConfigUrls": Array [
                        "foo",
                      ],
                      "whitelistedPanelUrls": Array [
                        "bar",
                      ],
                    },
                    "id": "1",
                    "linked": false,
                    "mode": "viewer",
                    "orientation": "Portrait",
                    "role": "Logged-Out Viewer",
                    "type": "Panel",
                    "x": 0,
                    "y": 0,
                  },
                ],
                "openEditViewHandler": [Function],
                "openExtensionViewHandler": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            false,
            false,
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
